# Speculum

./: .env.example  .gitignore  README.md  pyproject.toml  run_pyenv.sh
.github/workflows/: appimage.yml
packaging/linux/: AppRun  io.github.Zer0C00I.Speculum.appdata.xml  speculum.appdata.xml  speculum.desktop  speculum.spec
pdftranslator/: babeldoc_runner.py  config.py  logging_config.py  main.py  translation_cache.py  translation_job.py
pdftranslator/ai/: anthropic.py  base.py  deepseek.py
pdftranslator/gui/: app.py  main_window.py  pdf_viewer.py  render_worker.py  settings_dialog.py  translate_worker.py
pdftranslator/pdf/: engine.py
scripts/: build_appimage.sh
